[refs #99877] File select: fix width to look OK on IE.

--- a/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/fileselect.less
+++ b/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/fileselect.less
@@ -1,5 +1,5 @@
 select.land-fileselect {
-  max-width: 18px;
+  max-width: 50px;
   float: right;
   margin-left: 3px;
 }
